# EasyOffer

./: .gitignore  CPP-Base.docx  CPP-Basics.md  CPP.xmind  DB.xmind  Data Structure and Algorithm.xmind  High-performance Server Programming.docx  MySQL.docx  Net Programing Base.docx  Net Programing.xmind  OS related.docx  README.md  Redis.docx  Running.xmind  ~$ related.docx
CPP_Base/: CPP_Base.sln
CPP_Base/CPP_Base/: CMakeLists.txt  CPP_Base.cpp  CPP_Base.vcxproj  CPP_Base.vcxproj.filters  ReadMe.txt  stdafx.cpp
CPP_Base/Memory/: CMakeLists.txt  Memory.cpp  Memory.h  Memory.vcxproj  Memory.vcxproj.filters  stdafx.cpp
CPP_Base/Misc/: CMakeLists.txt  Misc.cpp  Misc.vcxproj  Misc.vcxproj.filters  stdafx.cpp
CPP_Base/String/: CMakeLists.txt  MyString.cpp  MyString.h  String.cpp  String.vcxproj  String.vcxproj.filters  stdafx.cpp
CVpractice/: CMakeLists.txt  Drawing_1.cc  OCV learning note.docx  blending_addWeighted.cc  mat_mask_operations.cc  videocapture.cc
LeetCode/: CMakeLists.txt  LeetCode.sln
LeetCode/Array/: Array.cpp  Array.h  Array.vcxproj  Array.vcxproj.filters  CMakeLists.txt  TopKFrequency.cpp  removeElement.cpp
LeetCode/BackTracking/: BackTracking.cpp  BackTracking.vcxproj  BackTracking.vcxproj.filters  CMakeLists.txt
LeetCode/BinTree/: BinTree.cpp  BinTree.h  BinTree.vcxproj  BinTree.vcxproj.filters  BinTreeDepth.cpp  BinTreeFunc.cpp  CMakeLists.txt  LevelOrder.cpp  SumPathes.cpp
LeetCode/BitManipunation/: BitManipunation.cpp  BitManipunation.vcxproj  BitManipunation.vcxproj.filters  CMakeLists.txt  ReadMe.txt  stdafx.cpp
LeetCode/Debug/: Array.ilk
LeetCode/DynamicProgramming/: CMakeLists.txt  DynamicProgramming.cpp  DynamicProgramming.h  DynamicProgramming.vcxproj  DynamicProgramming.vcxproj.filters  PerfectSquares.cpp  UniqueBSTs.cpp
LeetCode/Greedy/: CMakeLists.txt  Candy.cpp  GasStation.cpp  Greedy.cpp  Greedy.h  Greedy.vcxproj  Greedy.vcxproj.filters  ReadMe.txt  WordBreak.cpp  stdafx.cpp
LeetCode/LinkedList/: CMakeLists.txt  LinkedList.cpp  LinkedList.vcxproj  LinkedList.vcxproj.filters
LeetCode/Math/: CMakeLists.txt  Math.cpp  Math.vcxproj  Math.vcxproj.filters  ReadMe.txt
LeetCode/SelfString/: CMakeLists.txt  DecodeString.cpp  ReadMe.txt  SelfString.cpp  SelfString.h  SelfString.vcxproj  SelfString.vcxproj.filters  String.cpp  String.h  stdafx.cpp
LeetCode/Sort/: Bubble.cpp  CMakeLists.txt  Insert.cpp  MergeSort.cpp  OnO1Sort.cpp  QuickSort.cpp  Selection.cpp  Sort.cpp  Sort.h  Sort.vcxproj  Sort.vcxproj.filters
LeetCode/Tree/: Tree.h  Tree.vcxproj  Tree.vcxproj.filters
OCVpractice/: CMakeLists.txt  OCV learning note.docx  Smoothing.cc  cvpractice.h  drawing.cc  drawing_0.cc  how_to_scan_images.cc  main.cpp  mat_the_basic_image_container.cc
XiaoLian/: XiaoLian.sln
XiaoLian/XiaoLian/: Question1.cpp  Question2.cpp  Question3.cpp  ReadMe.txt  XiaoLian.cpp  XiaoLian.h  XiaoLian.vcxproj  XiaoLian.vcxproj.filters  stdafx.cpp
cmake_pratice/: cmake_note.txt
cmake_pratice/t1/: CMakeLists.txt  main.cpp
cmake_pratice/t2/: CMakeLists.txt  COPYRIGHT  README  runhello.sh
cmake_pratice/t2/doc/: hello.txt
cmake_pratice/t2/src/: CMakeLists.txt  main.cpp
cmake_pratice/t3/lib/: CMakeLists.txt  hello.cpp
(+14 files in other folders)
