SET(LIBHELLO_SRC hello.cpp)
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
#libhello.so
#ADD_LIBRARY(libname [SHARED|STATIC|MODULE]

ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
#libhello_static.a

SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
#libhello.a
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)

GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)

#make在构建一个新的target 时，会尝试清理掉其他使用这个名字的库
MESSAGE(STATUS "This is the hello_static OUTPUT_NAME: "${OUTPUT_VALUE})
SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
